# OTGUVC

./: README.md
app/: build.gradle
app/src/androidTest/java/com/lin/otguvc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/cpp/aicore/: Makefile  activation.c  activation.h  agriculture.anchors  agriculture.names  aicore.c  aicore.h  batchnorm_layer.c  batchnorm_layer.h  bitmap.c  bitmap.h  blas.cl  box.c  box.h  cl_common.h  cl_wrapper.c  cl_wrapper.h  coco.names  convolution.cl  convolutional_layer.c  convolutional_layer.h  fifo.c  fifo.h  gemm.c  gemm.h  half.c  half.h  im2col.c  im2col.h  image.c  image.h  list.c  list.h  maxpool.cl  maxpool_layer.c  maxpool_layer.h  msm_ion.h  neon_math.c  neon_math.h  resample.cl  (+18 more)
app/src/main/cpp/bak/libusb_bak/include/: config.h
app/src/main/cpp/bak/libusb_bak/src/: core.c
app/src/main/cpp/bak/libusb_bak/src/os/: linux_netlink.c  linux_usbfs.c  threads_posix.c
app/src/main/cpp/bak/libuvc_bak/include/libuvc/: libuvc_config.h
app/src/main/cpp/ffmpeg/: ffmpeg_log.cpp  ffmpeg_log.h  local_ffmpeg.cpp  local_ffmpeg.h
app/src/main/cpp/libusb/include/: config.h  libusbi.h
app/src/main/cpp/libusb/src/os/: android_netlink.c  android_usbfs.c  threads_posix.c
app/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_internal.h
app/src/main/cpp/utils/: list.h  localdefines.h  lock.cpp  lock.h  utilbase.h
app/src/main/cpp/v4l2/: v4l2.cpp  v4l2.h
app/src/main/java/com/lin/otguvc/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/lin/otguvc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: aia.jks
